<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    tools:context="com.example.apurva.mediguide1.LoginActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/log_in_1"
        android:textColor="@android:color/white"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_name"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="325dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:drawableStart="@drawable/ic_user_id"
            android:hint="@string/username_2"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textCursorDrawable="@drawable/colors_cursor"
            android:textStyle="bold"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_password"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="225dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/password_2"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textCursorDrawable="@drawable/colors_cursor"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/log_in_btn"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="115dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="Sign In"
        android:background="@drawable/background_login"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
