<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    tools:context="com.example.apurva.mediguide1.Register1Activity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/display_name"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="138dp"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:drawableLeft="@drawable/ic_user_id"
            android:hint="@string/name_1"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:textStyle="bold"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/display_email"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="275dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:drawableLeft="@drawable/ic_email"
            android:hint="@string/email_1"
            android:textColor="@android:color/white"
            android:textColorHighlight="@color/common_google_signin_btn_text_dark_default"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:textStyle="bold"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/display_password"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="175dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:drawableLeft="@drawable/ic_password"
            android:hint="@string/password_1"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:textStyle="bold"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/reg1crt_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/background_login"
        android:text="Sign Up"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:text="CREATE A NEW ACCOUNT"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
